# seccmop_syscall_detection

./: Readme.md
client/: CmakeLists.txt  detection_client.cpp  detection_client.h
keystore/: detection.jks
serve/: CMakeLists.txt  detection_serve.cpp  detection_serve.h
test/: app-debug_inject.apk.idsig
tools/: Liefinject.py
